# wire_pipe_det

./: .gitignore  CMakeLists.txt  convert_only_pipe_det.py  package.xml
config/: params.yaml
include/wireandpipe_detection_cpp/: wireandpipe_detection.hpp
launch/: wireandpipe_detection.launch.py
src/: 1.py  2.py  3.py  bbox.py  info.md  only_pipe_det.onnx  only_pipe_det.pt  wireandpipe_detection.cpp
